product_docs/docs/pem/7.15/pem_upgrade/04_troubleshooting.mdx
---
title: "Troubleshooting"
---

<div id="Troubleshooting" class="registered_link"></div>


## Reconfiguring the PEM Server



In certain situations, you may need to uninstall the PEM server, install it again, and reconfigure the PEM server. Use the following commands in the given sequence:

1.  Use the following command to remove the PEM server configuration and uninstall:
    
    ``` text
    /usr/edb/pem/bin/configure-pem-server.sh –un
    ```

2.  Use the following command to remove the PEM packages:
    
    ``` text
    yum erase edb-pem-server
    ```

3.  Use the following command to drop the `pem` database:
    
    ``` text
    DROP DATABASE pem
    ```

4.  Move the certificates from `/root/.pem/` to another location:
    
    ``` text
    mv /root/.pem/* <new_location>
    ```

5.  Move the `agent.cfg` file from `/usr/edb/pem/agent/etc/agent.cfg` to another location:
    
    ``` text
    mv /usr/edb/pem/agent/etc/agent.cfg <new_location>
    ```

6.  Then, use the following command to configure the PEM server again:
    
    ``` text
    /usr/edb/pem/bin/configure-pem-server.sh
    ```

## The pem.alert Table Fails to Restore

When restoring the `pem` backing database from backup, you may encounter an error during the restoration of the `pem.alert` table. This is caused by a missing table pre-requisite for the table - the `pg_restore` utility may restore the `pem.alert` pre-requisites *after* it attempts to restore `pem.alert`.

If this happens, the output from `pg_restore` will include error messages that refer to the `alert` table:

``` text
pg_restore: [archiver (db)] could not execute query: ERROR: insert or update on table "alert_history" violates foreign key constraint "alert_history_alert_id_fkey"
DETAIL: Key (alert_id)=(3) is not present in table "alert".
Command was: ALTER TABLE ONLY alert_history
ADD CONSTRAINT alert_history_alert_id_fkey FOREIGN KEY (alert_id) REFERENCES alert(id) ON...
pg_restore: creating FK CONSTRAINT alert_status_alert_id_fkey
pg_restore: [archiver (db)] Error from TOC entry 3265; 2606 18355 FK CONSTRAINT alert_status_alert_id_fkey postgres
pg_restore: [archiver (db)] could not execute query: ERROR: insert or update on table "alert_status" violates foreign key constraint "alert_status_alert_id_fkey"
DETAIL: Key (alert_id)=(1) is not present in table "alert".
Command was: ALTER TABLE ONLY alert_status
ADD CONSTRAINT alert_status_alert_id_fkey FOREIGN KEY (alert_id) REFERENCES alert(id) ON U...
```

If you encounter this problem, restore the `pem` database before restoring the `pem.alert` table. Restoring the `pem` database will install the pre-requisites for `pem.alert`, and the restoration of the table should complete as expected.
